--- a/AdministratorLogin.xaml
+++ b/AdministratorLogin.xaml
@@ -5,8 +5,15 @@
         xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
         xmlns:local="clr-namespace:Gestion_Taller"
         mc:Ignorable="d"
-        Title="AdministratorLogin" Height="300" Width="300">
+        Title="AdministratorLogin" Height="186.207" Width="300">
     <Grid>
-        
+                <Label Content="Administrator Login" HorizontalAlignment="Center" VerticalAlignment="Top" Height="56" Width="275" FontSize="30" Grid.ColumnSpan="2" Margin="0,10,0,0"/>
+        <PasswordBox HorizontalAlignment="Center" Margin="0,0,0,0" VerticalAlignment="Bottom" Width="125"/>
+
+        <Grid.ColumnDefinitions>
+            <ColumnDefinition Width="48*"/>
+            <ColumnDefinition Width="247*"/>
+        </Grid.ColumnDefinitions>
+
     </Grid>
 </Window>
