--- a/LauncherWindow.xaml
+++ b/LauncherWindow.xaml
@@ -12,5 +12,6 @@
         <Button Content="Iniciar sesion" HorizontalAlignment="Left" Height="40" Margin="10,152,0,0" VerticalAlignment="Top" Width="188"/>
         <Label Content="Profesor" HorizontalAlignment="Left" Height="68" Margin="361,10,0,0" VerticalAlignment="Top" FontSize="36"/>
         <Button Content="Iniciar sesion" HorizontalAlignment="Left" Height="40" Margin="361,152,0,0" VerticalAlignment="Top" Width="247" RenderTransformOrigin="0.5,0.5" Click="Button_Click"/>
+        <Rectangle Fill="Black" HorizontalAlignment="Left" Height="153" Margin="308,31,0,0" Stroke="Black" VerticalAlignment="Top" Width="4"/>
     </Grid>
 </Window>
