--- a/TeacherHomeWindow.xaml
+++ b/TeacherHomeWindow.xaml
@@ -7,13 +7,13 @@
         mc:Ignorable="d"
         Title="Inicio de Profesores" Height="291.724" Width="494.483">
     <Grid>
-        <Button Content="Retirar" HorizontalAlignment="Left" Margin="20,0,0,20" VerticalAlignment="Bottom" Width="80" Height="35" Click="Button_Click"/>
-        <Button Content="Devolver" HorizontalAlignment="Right" Margin="0,0,20,20" VerticalAlignment="Bottom" Width="80" Height="35" Click="Button_Click_1"/>
+        <Button Content="Retirar" HorizontalAlignment="Left" Margin="20,0,0,20" VerticalAlignment="Bottom" Width="80" Height="35" Click="openWithdrawWindow"/>
+        <Button Content="Devolver" HorizontalAlignment="Right" Margin="0,0,20,20" VerticalAlignment="Bottom" Width="80" Height="35" Click="openReturnWindow"/>
         <Image HorizontalAlignment="Center" Height="220" Margin="0,20,0,0" VerticalAlignment="Top">
             <Image.Source>
                 <BitmapImage UriSource="/Images/Logo-Juan23.jpg" />
             </Image.Source>
         </Image>
-        <Button Content="←" Height="20" HorizontalAlignment="Left" Margin="10,10,0,0" Name="button1" VerticalAlignment="Top" Width="20" Click="button1_Click" />
+        <Button Content="←" Height="20" HorizontalAlignment="Left" Margin="10,10,0,0" Name="button1" VerticalAlignment="Top" Width="20" Click="goBack" />
     </Grid>
 </Window>
