--- a/TeacherHomeWindow.xaml
+++ b/TeacherHomeWindow.xaml
@@ -11,7 +11,7 @@
         <Button Content="Devolver" HorizontalAlignment="Right" Margin="0,0,20,20" VerticalAlignment="Bottom" Width="80" Height="35" Click="openReturnWindow"/>
         <Image HorizontalAlignment="Center" Height="220" Margin="0,20,0,0" VerticalAlignment="Top">
             <Image.Source>
-                <BitmapImage UriSource="/Images/Logo-Juan23.jpg" />
+                <BitmapImage UriSource="/Images/school_logo.jpg" />
             </Image.Source>
         </Image>
         <Button Content="←" Height="20" HorizontalAlignment="Left" Margin="10,10,0,0" Name="button1" VerticalAlignment="Top" Width="20" Click="goBack" />
