--- a/WithdrawReturnWindow.xaml
+++ b/WithdrawReturnWindow.xaml
@@ -7,7 +7,7 @@
         mc:Ignorable="d"
         Title="WithdrawReturnWindow" Height="300" Width="300">
     <Grid>
-        <Button Content="←" Height="20" HorizontalAlignment="Left" Margin="10,10,0,0" Name="UIBackButton" VerticalAlignment="Top" Width="20" Click="goBack" />
+        <Button Content="←" Height="20" HorizontalAlignment="Left" Margin="10,10,0,0" Name="UIBackButton" VerticalAlignment="Top" Width="20" Click="GoBack" />
         <Label Content="Label" HorizontalAlignment="Left" Margin="109,121,0,0" VerticalAlignment="Top" Name="UIStatusLabel"/>
     </Grid>
 </Window>
