--- a/AdminHomeWindow.xaml
+++ b/AdminHomeWindow.xaml
@@ -21,7 +21,7 @@
         <Button x:Name="UITeacherAddButton" Content="Agregar" HorizontalAlignment="Left" Margin="228,130,0,0" VerticalAlignment="Top" Width="49" Click="openAdminTeacherAddWindow"/>
         <Button x:Name="UITeacherRemoveButton" Content="Quitar" HorizontalAlignment="Left" Margin="282,130,0,0" VerticalAlignment="Top" Width="43" Click="openAdminTeacherDeleteWindow"/>
         <Button x:Name="UITeacherModifyButton" Content="Modificar" HorizontalAlignment="Left" Margin="330,130,0,0" VerticalAlignment="Top" Width="61" Click="openAdminTeacherEditWindow"/>
-        <Button x:Name="UITeacherViewButton" Content="Ver profesores" HorizontalAlignment="Left" Margin="247,165,0,0" VerticalAlignment="Top" Width="109"/>
+        <Button x:Name="UITeacherViewButton" Content="Ver profesores" HorizontalAlignment="Left" Margin="247,165,0,0" VerticalAlignment="Top" Width="109" Click="ShowTeachers" />
 
         <Image x:Name="Agregar_profesor_png" Margin="214,206,137,60" Source="Images/ic_teacher_add.png" Stretch="Fill" RenderTransformOrigin="0.071,0.198"/>
         <Image x:Name="Borrar_profesor_png" Margin="279,206,72,60" Source="Images/ic_teacher_delete.png" Stretch="Fill"/>
