--- a/AdminHomeWindow.xaml
+++ b/AdminHomeWindow.xaml
@@ -30,9 +30,9 @@
 
         <!-- Inventory -->
         <Label x:Name="UIInventoryTitleLabel" Content="Inventario general" HorizontalAlignment="Left" Margin="30,52,0,0" VerticalAlignment="Top"/>
-        <Button x:Name="UIInventoryAddButton" Content="Agregar" HorizontalAlignment="Left" Margin="10,114,0,0" VerticalAlignment="Top" Width="51"/>
-        <Button x:Name="UIInventoryRemoveButton" Content="Quitar" HorizontalAlignment="Left" Margin="66,114,0,0" VerticalAlignment="Top" Width="51"/>
-        <Button x:Name="UIInventoryModifyButton" Content="Modificar" HorizontalAlignment="Left" Margin="122,114,0,0" VerticalAlignment="Top" Width="58"/>
+        <Button x:Name="UIInventoryAddButton" Content="Agregar" HorizontalAlignment="Left" Margin="10,114,0,0" VerticalAlignment="Top" Width="51" Click="AddInventoryButton"/>
+        <Button x:Name="UIInventoryRemoveButton" Content="Quitar" HorizontalAlignment="Left" Margin="66,114,0,0" VerticalAlignment="Top" Width="51" Click="DeleteInventoryButton"/>
+        <Button x:Name="UIInventoryModifyButton" Content="Modificar" HorizontalAlignment="Left" Margin="122,114,0,0" VerticalAlignment="Top" Width="58" Click="ModifyInventoryButton"/>
         <Button x:Name="UIInventoryViewButton" Content="Ver inventario" HorizontalAlignment="Left" Margin="56,149,0,0" VerticalAlignment="Top" Width="80" Click="ShowInventory"/>
         <Label x:Name="UIAdminInfoTotalTitle" Content="Total:" HorizontalAlignment="Left" Margin="42,83,0,0" VerticalAlignment="Top"/>
         <Label x:Name="UIAdminInfoTotalValue" Content="[cantidad]" HorizontalAlignment="Left" Margin="81,83,0,0" VerticalAlignment="Top"/>
