--- a/AdminInventoryAddWindow.xaml
+++ b/AdminInventoryAddWindow.xaml
@@ -1,12 +1,24 @@
-﻿<Window x:Class="Gestion_Taller.Window1"
+﻿<Window x:Class="Gestion_Taller.AdminInventoryAddWindow"
         xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
         xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
         xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
         xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
         xmlns:local="clr-namespace:Gestion_Taller"
         mc:Ignorable="d"
-        Title="Window1" Height="300" Width="300">
+        Title="Agregar Herramienta" Height="300" Width="300">
     <Grid>
-        
+        <Grid.ColumnDefinitions>
+            <ColumnDefinition Width="16*"/>
+            <ColumnDefinition Width="163*"/>
+            <ColumnDefinition Width="113*"/>
+        </Grid.ColumnDefinitions>
+        <TextBox Grid.Column="1" HorizontalAlignment="Left" Height="23" Margin="83,81,0,0" TextWrapping="Wrap" VerticalAlignment="Top" Width="120" Grid.ColumnSpan="2"/>
+        <TextBox Grid.Column="1" HorizontalAlignment="Left" Height="64" Margin="83,122,0,0" TextWrapping="Wrap" VerticalAlignment="Top" Width="120" Grid.ColumnSpan="2"/>
+        <Label Content="Nombre:" Grid.Column="1" HorizontalAlignment="Left" Margin="10,81,0,0" VerticalAlignment="Top"/>
+        <Label Content="Descripcion:" Grid.Column="1" HorizontalAlignment="Left" Margin="4,140,0,0" VerticalAlignment="Top"/>
+        <Button Grid.ColumnSpan="2" Content="Volver" HorizontalAlignment="Left" VerticalAlignment="Top" Width="47" Click="ReturnButton"/>
+        <Label Content="Agregar una herramienta" Grid.Column="1" HorizontalAlignment="Left" Margin="60,17,0,0" VerticalAlignment="Top" Grid.ColumnSpan="2"/>
+        <Button Content="Aceptar" Grid.Column="1" HorizontalAlignment="Left" Margin="83,217,0,0" VerticalAlignment="Top" Width="75"/>
+
     </Grid>
 </Window>
