--- a/AdminInventoryDeleteWindow.xaml
+++ b/AdminInventoryDeleteWindow.xaml
@@ -1,12 +1,17 @@
-﻿<Window x:Class="Gestion_Taller.Window2"
+﻿<Window x:Class="Gestion_Taller.AdminInventoryDeleteWindow"
         xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
         xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
         xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
         xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
         xmlns:local="clr-namespace:Gestion_Taller"
         mc:Ignorable="d"
-        Title="Window2" Height="300" Width="300">
+        Title="Eliminar herramienta" Height="300" Width="300">
     <Grid>
-        
+        <Label Content="Eliminar herramienta" HorizontalAlignment="Left" Margin="79,17,0,0" VerticalAlignment="Top"/>
+        <Button Content="Volver" HorizontalAlignment="Left" VerticalAlignment="Top" Width="42" Click="ReturnButton"/>
+        <Label Content="ID de herramienta:" HorizontalAlignment="Left" Margin="85,69,0,0" VerticalAlignment="Top"/>
+        <TextBox HorizontalAlignment="Left" Height="23" Margin="79,100,0,0" TextWrapping="Wrap" VerticalAlignment="Top" Width="120"/>
+        <Button Content="Aceptar" HorizontalAlignment="Left" VerticalAlignment="Top" Width="75" Margin="103,172,0,0"/>
+
     </Grid>
 </Window>
