--- a/AdminInventoryEditWindow.xaml
+++ b/AdminInventoryEditWindow.xaml
@@ -1,4 +1,4 @@
-﻿<Window x:Class="Gestion_Taller.Window3"
+﻿<Window x:Class="Gestion_Taller.AdminInventoryEditWindow"
         xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
         xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
         xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
@@ -7,7 +7,7 @@
         mc:Ignorable="d" Height="300" Width="300" Title="Editar herramienta">
     <Grid>
         <Label Content="Editar herramienta" HorizontalAlignment="Left" VerticalAlignment="Top" Margin="90,10,0,0"/>
-        <Button Content="Volver" HorizontalAlignment="Left" VerticalAlignment="Top" Width="45"/>
+        <Button Content="Volver" HorizontalAlignment="Left" VerticalAlignment="Top" Width="45" Click="ReturnButton"/>
         <Label Content="[Base de datos]" HorizontalAlignment="Left" VerticalAlignment="Top" Margin="100,66,0,0"/>
         <Label Content="Nuevo nombre:" HorizontalAlignment="Left" Height="26" Margin="8,110,0,0" VerticalAlignment="Top" Width="95" RenderTransformOrigin="0.5,0.5">
             <Label.RenderTransform>
