--- a/AdminInventoryDeleteWindow.xaml
+++ b/AdminInventoryDeleteWindow.xaml
@@ -5,13 +5,12 @@
         xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
         xmlns:local="clr-namespace:Gestion_Taller"
         mc:Ignorable="d"
-        Title="Eliminar herramienta" Height="300" Width="300">
+        Title="AdminInventoryDeleteWindow" Height="300" Width="300">
     <Grid>
         <Label Content="Eliminar herramienta" HorizontalAlignment="Left" Margin="79,17,0,0" VerticalAlignment="Top"/>
         <Button Content="Volver" HorizontalAlignment="Left" VerticalAlignment="Top" Width="42" Click="ReturnButton"/>
         <Label Content="ID de herramienta:" HorizontalAlignment="Left" Margin="85,69,0,0" VerticalAlignment="Top"/>
         <TextBox HorizontalAlignment="Left" Height="23" Margin="79,100,0,0" TextWrapping="Wrap" VerticalAlignment="Top" Width="120"/>
         <Button Content="Aceptar" HorizontalAlignment="Left" VerticalAlignment="Top" Width="75" Margin="103,172,0,0"/>
-
     </Grid>
 </Window>
